@@ -7,22 +7,22 @@ diff -rubBaN tcl.orig/unix/Makefile.in tcl/unix/Makefile.in
  	$(CC) -c $(CC_SWITCHES) \
 -		-DCFG_INSTALL_LIBDIR="\"$(LIB_INSTALL_DIR)\"" \
 -		-DCFG_INSTALL_BINDIR="\"$(BIN_INSTALL_DIR)\"" \
-+		-DCFG_INSTALL_LIBDIR="\"$(COOKIT_ROOT)/lib\"" \
-+		-DCFG_INSTALL_BINDIR="\"$(COOKIT_ROOT)/bin\"" \
++		-DCFG_INSTALL_LIBDIR="\"$(COOKIT_ROOT)lib\"" \
++		-DCFG_INSTALL_BINDIR="\"$(COOKIT_ROOT)bin\"" \
  		-DCFG_INSTALL_SCRDIR="\"$(SCRIPT_INSTALL_DIR)\"" \
 -		-DCFG_INSTALL_INCDIR="\"$(INCLUDE_INSTALL_DIR)\"" \
 -		-DCFG_INSTALL_DOCDIR="\"$(MAN_INSTALL_DIR)\"" \
 -		-DCFG_RUNTIME_LIBDIR="\"$(libdir)\"" \
 -		-DCFG_RUNTIME_BINDIR="\"$(bindir)\"" \
-+		-DCFG_INSTALL_INCDIR="\"$(COOKIT_ROOT)/include\"" \
-+		-DCFG_INSTALL_DOCDIR="\"$(COOKIT_ROOT)/share/man\"" \
-+		-DCFG_RUNTIME_LIBDIR="\"$(COOKIT_ROOT)/lib\"" \
-+		-DCFG_RUNTIME_BINDIR="\"$(COOKIT_ROOT)/bin\"" \
++		-DCFG_INSTALL_INCDIR="\"$(COOKIT_ROOT)include\"" \
++		-DCFG_INSTALL_DOCDIR="\"$(COOKIT_ROOT)share/man\"" \
++		-DCFG_RUNTIME_LIBDIR="\"$(COOKIT_ROOT)lib\"" \
++		-DCFG_RUNTIME_BINDIR="\"$(COOKIT_ROOT)bin\"" \
  		-DCFG_RUNTIME_SCRDIR="\"$(TCL_LIBRARY)\"" \
 -		-DCFG_RUNTIME_INCDIR="\"$(includedir)\"" \
 -		-DCFG_RUNTIME_DOCDIR="\"$(mandir)\"" \
-+		-DCFG_RUNTIME_INCDIR="\"$(COOKIT_ROOT)/include\"" \
-+		-DCFG_RUNTIME_DOCDIR="\"$(COOKIT_ROOT)/share/man\"" \
++		-DCFG_RUNTIME_INCDIR="\"$(COOKIT_ROOT)include\"" \
++		-DCFG_RUNTIME_DOCDIR="\"$(COOKIT_ROOT)share/man\"" \
  		-DCFG_RUNTIME_DLLFILE="\"$(TCL_LIB_FILE)\"" \
  		$(GENERIC_DIR)/tclPkgConfig.c
  
@@ -38,22 +38,22 @@ diff -rubBaN tcl.orig/win/Makefile.in tcl/win/Makefile.in
 -		-DCFG_INSTALL_SCRDIR="\"$(SCRIPT_INSTALL_DIR_NATIVE)\"" \
 -		-DCFG_INSTALL_INCDIR="\"$(INCLUDE_INSTALL_DIR_NATIVE)\"" \
 -		-DCFG_INSTALL_DOCDIR="\"$(MAN_INSTALL_DIR_NATIVE)\"" \
-+		-DCFG_INSTALL_LIBDIR="\"$(COOKIT_ROOT)/lib\"" \
-+		-DCFG_INSTALL_BINDIR="\"$(COOKIT_ROOT)/bin\"" \
++		-DCFG_INSTALL_LIBDIR="\"$(COOKIT_ROOT)lib\"" \
++		-DCFG_INSTALL_BINDIR="\"$(COOKIT_ROOT)bin\"" \
 +		-DCFG_INSTALL_SCRDIR="\"$(TCL_LIBRARY)\"" \
-+		-DCFG_INSTALL_INCDIR="\"$(COOKIT_ROOT)/include\"" \
-+		-DCFG_INSTALL_DOCDIR="\"$(COOKIT_ROOT)/share/man\"" \
++		-DCFG_INSTALL_INCDIR="\"$(COOKIT_ROOT)include\"" \
++		-DCFG_INSTALL_DOCDIR="\"$(COOKIT_ROOT)share/man\"" \
  		\
 -		-DCFG_RUNTIME_LIBDIR="\"$(libdir_native)\"" \
 -		-DCFG_RUNTIME_BINDIR="\"$(bindir_native)\"" \
 -		-DCFG_RUNTIME_SCRDIR="\"$(TCL_LIBRARY_NATIVE)\"" \
 -		-DCFG_RUNTIME_INCDIR="\"$(includedir_native)\"" \
 -		-DCFG_RUNTIME_DOCDIR="\"$(mandir_native)\"" \
-+		-DCFG_RUNTIME_LIBDIR="\"$(COOKIT_ROOT)/lib\"" \
-+		-DCFG_RUNTIME_BINDIR="\"$(COOKIT_ROOT)/bin\"" \
++		-DCFG_RUNTIME_LIBDIR="\"$(COOKIT_ROOT)lib\"" \
++		-DCFG_RUNTIME_BINDIR="\"$(COOKIT_ROOT)bin\"" \
 +		-DCFG_RUNTIME_SCRDIR="\"$(TCL_LIBRARY)\"" \
-+		-DCFG_RUNTIME_INCDIR="\"$(COOKIT_ROOT)/include\"" \
-+		-DCFG_RUNTIME_DOCDIR="\"$(COOKIT_ROOT)/share/man\"" \
++		-DCFG_RUNTIME_INCDIR="\"$(COOKIT_ROOT)include\"" \
++		-DCFG_RUNTIME_DOCDIR="\"$(COOKIT_ROOT)share/man\"" \
  		-DBUILD_tcl \
  		@DEPARG@ $(CC_OBJNAME)
  
