@@ -11,22 +11,22 @@ diff -rubBaN tk.orig/unix/Makefile.in tk/unix/Makefile.in
 -		-DCFG_INSTALL_INCDIR="\"$(INCLUDE_INSTALL_DIR)\"" \
 -		-DCFG_INSTALL_DOCDIR="\"$(MAN_INSTALL_DIR)\"" \
 -		-DCFG_INSTALL_DEMODIR="\"$(DEMO_INSTALL_DIR)\"" \
-+		-DCFG_INSTALL_LIBDIR="\"$(COOKIT_ROOT)/lib\"" \
-+		-DCFG_INSTALL_BINDIR="\"$(COOKIT_ROOT)/bin\"" \
++		-DCFG_INSTALL_LIBDIR="\"$(COOKIT_ROOT)lib\"" \
++		-DCFG_INSTALL_BINDIR="\"$(COOKIT_ROOT)bin\"" \
 +		-DCFG_INSTALL_SCRDIR="\"$(TK_LIBRARY)\"" \
-+		-DCFG_INSTALL_INCDIR="\"$(COOKIT_ROOT)/include\"" \
-+		-DCFG_INSTALL_DOCDIR="\"$(COOKIT_ROOT)/share/man\"" \
++		-DCFG_INSTALL_INCDIR="\"$(COOKIT_ROOT)include\"" \
++		-DCFG_INSTALL_DOCDIR="\"$(COOKIT_ROOT)share/man\"" \
 +		-DCFG_INSTALL_DEMODIR="\"$(TK_LIBRARY)/demos\"" \
  		\
 -		-DCFG_RUNTIME_LIBDIR="\"$(libdir)\"" \
 -		-DCFG_RUNTIME_BINDIR="\"$(bindir)\"" \
-+		-DCFG_RUNTIME_LIBDIR="\"$(COOKIT_ROOT)/lib\"" \
-+		-DCFG_RUNTIME_BINDIR="\"$(COOKIT_ROOT)/bin\"" \
++		-DCFG_RUNTIME_LIBDIR="\"$(COOKIT_ROOT)lib\"" \
++		-DCFG_RUNTIME_BINDIR="\"$(COOKIT_ROOT)bin\"" \
  		-DCFG_RUNTIME_SCRDIR="\"$(TK_LIBRARY)\"" \
 -		-DCFG_RUNTIME_INCDIR="\"$(includedir)\"" \
 -		-DCFG_RUNTIME_DOCDIR="\"$(mandir)\"" \
-+		-DCFG_RUNTIME_INCDIR="\"$(COOKIT_ROOT)/include\"" \
-+		-DCFG_RUNTIME_DOCDIR="\"$(COOKIT_ROOT)/share/man\"" \
++		-DCFG_RUNTIME_INCDIR="\"$(COOKIT_ROOT)include\"" \
++		-DCFG_RUNTIME_DOCDIR="\"$(COOKIT_ROOT)share/man\"" \
  		-DCFG_RUNTIME_DLLFILE="\"$(TK_LIB_FILE)\"" \
 -		-DCFG_RUNTIME_DEMODIR="\"$(DEMO_INSTALL_DIR)\"" \
 +		-DCFG_RUNTIME_DEMODIR="\"$(TK_LIBRARY)/demos\"" \
